grammar.js
    lilypond: $ => repeat($._top_level_expression),

    _top_level_expression: $ => choice(
      $.version_statement,
      $.header_block,
      $.book_block,
      $.bookpart_block,
      $.score_block,
      $.paper_block,
      $.layout_block,
      $.midi_block,
      $.assignment,
      $.music,
      $.simultaneous_music,
      $.context_expression,
      $.repeat_expression,
      $.music_function,
      $.markup,
      $.lyric_mode,
      $.addlyrics,
      $.lyricsto,
      $.figure_mode,
      $.chord_mode,
      $.partial,
      $.embedded_scm,
      $.comment,
    ),

    // Comments

    version_statement: $ => seq(
      '\\version',
      alias($.string, $.version_number),
    ),

    // Header

    header_block: $ => seq(
      '\\header',
      '{',
      repeat($._header_body),
      '}',
    ),

    _header_body: $ => choice(
      $.assignment,
      $.embedded_scm,
      $.comment,
    ),

    // Book structure

    book_block: $ => seq(
      '\\book',
      '{',
      repeat($._book_body),
      '}',
    ),

    _book_body: $ => choice(
      $.header_block,
      $.bookpart_block,
      $.score_block,
      $.paper_block,
      $.music,
      $.simultaneous_music,
      $.context_expression,
      $.repeat_expression,
      $.music_function,
      $.embedded_scm,
      $.comment,
    ),

    assignment: $ => seq(
      $.assignment_id,
      '=',
      $._identifier_init,
    ),

    assignment_id: $ => choice(
      $.symbol,
      $.string,
    ),

    _identifier_init: $ => choice(
      $.string,
      $.number_expression,
      $.music,
      $.simultaneous_music,
      $.context_expression,
      $.repeat_expression,
      $.music_function,
      $.embedded_scm,
    ),

    // Number expressions

    string: $ => /"([^"\\]|\\.)*"/,
